NEXT-299 Added detail and create page as well as interface translations

--- a/Resources/administration/src/module/sw-customer/page/sw-customer-list/sw-customer-list.html.twig
+++ b/Resources/administration/src/module/sw-customer/page/sw-customer-list/sw-customer-list.html.twig
@@ -40,8 +40,7 @@
                                                             :label="$tc('sw-customer.list.columnCustomerNumber')"
                                                             dataIndex="number"
                                                             sortable
-                                                            editable
-                                                            truncate>
+                                                            editable>
                                                 {% block sw_customer_list_grid_columns_customer_number_label %}
                                                     {{ item.number }}
                                                 {% endblock %}
