NEXT-325 - Add order module

--- a/Resources/administration/src/app/component/structure/sw-admin-menu/sw-admin-menu.less
+++ b/Resources/administration/src/app/component/structure/sw-admin-menu/sw-admin-menu.less
@@ -160,6 +160,7 @@
         font-size: 14px;
         font-weight: 600;
         line-height: 24px;
+        cursor: pointer;
 
         &:hover,
         &.router-link-active,
