--- a/Resources/administration/src/module/sw-customer/component/sw-customer-address-form/sw-customer-address-form.html.twig
+++ b/Resources/administration/src/module/sw-customer/component/sw-customer-address-form/sw-customer-address-form.html.twig
@@ -1,7 +1,7 @@
 {% block sw_customer_address_form %}
     <div class="sw-customer-address-form">
         {% block sw_customer_address_form_container %}
-            <sw-container grid="1fr 1fr" gap="30px">
+            <sw-container grid="1fr 1fr" gap="0px 30px">
                 {% block sw_customer_address_form_company_field %}
                     <sw-field :label="$tc('sw-customer.addressForm.labelCompany')"
                               name="addressCompany"
