Fix namespace for src/core from Shopware to Shopware\Core

--- a/Resources/views/administration/index.html.twig
+++ b/Resources/views/administration/index.html.twig
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
-        Shopware Administration {Shopware::VERSION} {Shopware::VERSION_TEXT} (Rev. {Shopware::REVISION}) -
+        Shopware\Core Administration {Shopware\Core::VERSION} {Shopware\Core::VERSION_TEXT} (Rev. {Shopware\Core::REVISION}) -
         Backend (c) shopware AG
     </title>
 
