NEXT-359 - Add order detail base structure

--- a/Resources/administration/src/app/component/base/sw-address/sw-address.less
+++ b/Resources/administration/src/app/component/base/sw-address/sw-address.less
@@ -1,6 +1,7 @@
 @import "~less/variables";
 
-@sw-address-color-text: @color-gutenberg;
+@sw-address-color-text:   @color-gutenberg;
+@sw-address-color-border: @color-steam-cloud;
 
 .sw-address {
     margin-bottom: 20px;
@@ -8,4 +9,16 @@
     font-size: 14px;
     line-height: 20px;
     color: @sw-address-color-text;
+
+    .sw-address__headline {
+        font-weight: 600;
+        padding: 15px;
+        border-bottom: 1px solid @sw-address-color-border;
+    }
+
+    &.sw-address--headline {
+        .sw-address__body {
+            padding: 15px;
+        }
+    }
 }
