--- a/Resources/administration/src/app/component/grid/sw-grid-row/sw-grid-row.html.twig
+++ b/Resources/administration/src/app/component/grid/sw-grid-row/sw-grid-row.html.twig
@@ -7,7 +7,7 @@
                         <sw-button @click="onInlineEditCancel" size="small">
                             {{ $tc('global.sw-grid-row.buttonInlineEditCancel') }}
                         </sw-button>
-                        <sw-button variant="primary" size="small" @click="onInlineEditFinish">
+                        <sw-button variant="primary" @click="onInlineEditFinish" size="small">
                             {{ $tc('global.sw-grid-row.buttonInlineEditSave') }}
                         </sw-button>
                     {% endblock %}
