--- a/Resources/administration/src/module/sw-order/page/sw-order-list/sw-order-list.html.twig
+++ b/Resources/administration/src/module/sw-order/page/sw-order-list/sw-order-list.html.twig
@@ -84,6 +84,7 @@
                                             <sw-grid-column flex="minmax(80px, 180px)"
                                                             :label="$tc('sw-order.list.columnAmount')"
                                                             dataIndex="amountTotal"
+                                                            align="right"
                                                             truncate
                                                             sortable>
                                                 {% block sw_order_list_grid_columns_amount_label %}
@@ -123,7 +124,7 @@
                                                     <sw-context-button>
 
                                                         {% block sw_customer_list_grid_columns_actions_view %}
-                                                            <sw-context-menu-item disabled>
+                                                            <sw-context-menu-item :routerLink="{ name: 'sw.order.detail', params: { id: item.id } }" disabled>
                                                                 {{ $tc('sw-order.list.contextMenuView') }}
                                                             </sw-context-menu-item>
                                                         {% endblock %}
