--- a/Resources/administration/src/app/component/base/sw-card/sw-card.html.twig
+++ b/Resources/administration/src/app/component/base/sw-card/sw-card.html.twig
@@ -1,5 +1,6 @@
 {% block sw_card %}
-    <div class="sw-card" :class="{ 'sw-card--tabs': hasTabsSlot }">
+    <div class="sw-card"
+         :class="{ 'sw-card--tabs': hasTabsSlot, 'sw-card--grid': hasGridSlot }">
         {% block sw_card_title %}
             <div class="sw-card__title" v-if="title">{{ title }}</div>
         {% endblock %}
@@ -10,6 +11,9 @@
             <div class="sw-card__content">
                 <slot>
                     {% block sw_card_slot_default %}{% endblock %}
+                </slot>
+                <slot name="grid">
+                    {% block sw_card_grid_slot %}{% endblock %}
                 </slot>
 
                 {% block sw_card_loader %}
