--- a/Resources/administration/src/app/component/base/sw-card/sw-card.less
+++ b/Resources/administration/src/app/component/base/sw-card/sw-card.less
@@ -19,6 +19,13 @@
         padding: 0;
     }
 
+    &.sw-card--grid {
+        .sw-card__content {
+            display: grid;
+            padding: 0;
+        }
+    }
+
     .sw-card__title {
         margin-bottom: 12px;
         font-size: 18px;
@@ -75,6 +82,10 @@
                 color: darken(@color-shopware-blue, 10);
             }
         }
+    }
+
+    .sw-card__section {
+        padding: 30px;
     }
 
     .sw-tabs {
