--- a/Resources/administration/src/app/component/grid/sw-grid-column/sw-grid-column.less
+++ b/Resources/administration/src/app/component/grid/sw-grid-column/sw-grid-column.less
@@ -53,7 +53,6 @@
         line-height: 24px;
         padding: 20px 20px;
         text-align: left;
-        font-size: 15px;
         color: @sw-grid-column-content-color-text;
 
         &.is--truncate {
@@ -66,6 +65,7 @@
             text-decoration: none;
 
             &:hover {
+                color: @color-shopware-blue;
                 text-decoration: underline;
             }
         }
