--- a/Resources/administration/src/module/sw-order/page/sw-order-detail/sw-order-detail.html.twig
+++ b/Resources/administration/src/module/sw-order/page/sw-order-detail/sw-order-detail.html.twig
@@ -16,13 +16,13 @@
         {% block sw_order_detail_actions %}
             <template slot="smart-bar-actions">
                 {% block sw_order_detail_actions_abort %}
-                    <sw-button link="sw.order.index" :disabled="isLoading">
+                    <sw-button link="sw.order.index" :disabled="order.isLoading">
                         {{ $tc('sw-order.detail.buttonCancel') }}
                     </sw-button>
                 {% endblock %}
 
                 {% block sw_order_detail_actions_save %}
-                    <sw-button variant="primary" :disabled="isLoading">
+                    <sw-button variant="primary" :disabled="order.isLoading">
                         {{ $tc('sw-order.detail.buttonSave') }}
                     </sw-button>
                 {% endblock %}
@@ -51,10 +51,7 @@
                 {% endblock %}
 
                 {% block sw_order_detail_content_view %}
-                    <router-view :order="order"
-                                 :isLoading="isLoading"
-                                 :isLoaded="isLoaded">
-                    </router-view>
+                    <router-view :order="order"></router-view>
                 {% endblock %}
 
             </sw-card-view>
